# fileorg

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml
specs/: 01-database.md  02-plugins.md  03-scanner.md  04-ai.md  05-dashboard.md  06-cli-and-export.md  07-check-command.md
src/fileorg/: __main__.py  cli.py  config.py
src/fileorg/ai/: client.py  prompts.py
src/fileorg/dashboard/: app.py
src/fileorg/dashboard/routes/: api.py  categories.py  clueless.py  encrypted.py  files.py  overview.py
src/fileorg/dashboard/static/: style.css
src/fileorg/dashboard/templates/: base.html  categories.html  clueless.html  clues.html  encrypted.html  files.html  overview.html
src/fileorg/db/: connection.py  migrations.py  models.py  queries.py
src/fileorg/export/: exporter.py
src/fileorg/plugins/: archive.py  base.py  clueless.py  encryption.py  exif.py  filename.py  ocr.py  registry.py
src/fileorg/scanner/: categorizer.py  hasher.py  keyboard.py  pipeline.py  walker.py
tests/: conftest.py  test_categorizer.py  test_db.py  test_keyboard.py  test_scanner.py
tests/test_plugins/: test_archive.py  test_encryption.py  test_filename.py
