[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fileorg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "ollama>=0.2",
    "pillow>=10",
    "piexif>=1.1",
    "pytesseract>=0.3",
    "python-magic>=0.4",
    "py7zr>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
fileorg = "fileorg.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fileorg"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
